{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 29,
  "lineage": "a64e53db-af9e-c0fb-5d20-d7b2dbedf180",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:956675039632:internet-gateway/igw-05e9860183225eda3",
            "id": "igw-05e9860183225eda3",
            "owner_id": "956675039632",
            "tags": {
              "Name": "test_igw"
            },
            "tags_all": {
              "Name": "test_igw"
            },
            "vpc_id": "vpc-0bea291223663920b"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_route_table_pubsub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:956675039632:route-table/rtb-0c54584439b3d0868",
            "id": "rtb-0c54584439b3d0868",
            "owner_id": "956675039632",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e9860183225eda3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test_route_table_pubsub1"
            },
            "tags_all": {
              "Name": "test_route_table_pubsub1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bea291223663920b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_route_table_pubsub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:956675039632:route-table/rtb-07688df4bcdff3651",
            "id": "rtb-07688df4bcdff3651",
            "owner_id": "956675039632",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e9860183225eda3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test_route_table_pubsub3"
            },
            "tags_all": {
              "Name": "test_route_table_pubsub3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bea291223663920b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_route_association_pub_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011a26f72058d7d6a",
            "route_table_id": "rtb-0c54584439b3d0868",
            "subnet_id": "subnet-0048f5dcaf80b8b4d"
          },
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_route_table.test_route_table_pubsub1",
            "aws_subnet.test-public-subnet1",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_route_association_pub_sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a6abd583f9c2548",
            "route_table_id": "rtb-07688df4bcdff3651",
            "subnet_id": "subnet-0bb5c26edcc11b25d"
          },
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_route_table.test_route_table_pubsub3",
            "aws_subnet.test-public-subnet3",
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-sg-eks-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:956675039632:security-group/sg-085d0f52b227b257f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085d0f52b227b257f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "test-sg-eks-cluster",
            "name_prefix": "",
            "owner_id": "956675039632",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-sg-eks-cluster"
            },
            "tags_all": {
              "Name": "test-sg-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bea291223663920b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test-public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:956675039632:subnet/subnet-0048f5dcaf80b8b4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0048f5dcaf80b8b4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "956675039632",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-public-subnet1",
              "kubernetes.io/cluster/test-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "test-public-subnet1",
              "kubernetes.io/cluster/test-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0bea291223663920b"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test-public-subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:956675039632:subnet/subnet-0bb5c26edcc11b25d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb5c26edcc11b25d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "956675039632",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-public-subnet3",
              "kubernetes.io/cluster/test-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "test-public-subnet3",
              "kubernetes.io/cluster/test-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0bea291223663920b"
          },
          "dependencies": [
            "aws_vpc.test-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:956675039632:vpc/vpc-0bea291223663920b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0f496578cb6937b02",
            "default_route_table_id": "rtb-0abae4411027b2176",
            "default_security_group_id": "sg-001acc3baefebff42",
            "dhcp_options_id": "dopt-0938f5c03436a3ca6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bea291223663920b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0abae4411027b2176",
            "owner_id": "956675039632",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            }
          }
        }
      ]
    }
  ]
}